--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorGray"
-    tools:context=".MainActivity">
+    android:background="@color/secondaryColor"
+    tools:context=".SplashActivity">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/loading_lottie"
