--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-
-    <color name="colorGray">#F2F2F2</color>
-
+    <color name="primaryColor">#1d1536</color>
+    <color name="primaryLightColor">#463b60</color>
+    <color name="primaryDarkColor">#000011</color>
+    <color name="secondaryColor">#ff7948</color>
+    <color name="secondaryLightColor">#ffaa75</color>
+    <color name="secondaryDarkColor">#c6491c</color>
+    <color name="primaryTextColor">#ffffff</color>
+    <color name="secondaryTextColor">#000000</color>
+    <color name="text_gray">#b4b4b4</color>
+    <color name="yellow">#FFDD4F</color>
+    <color name="white">#FFFFFF</color>
 </resources>
