--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="text_gray">#b4b4b4</color>
     <color name="yellow">#FFDD4F</color>
     <color name="white">#FFFFFF</color>
+    <color name="green">#4fc6ad</color>
+    <color name="layoutgray">#f2f3f7</color>
+
+
 </resources>
