--- a/app/src/main/res/layout/register_base_fragment.xml
+++ b/app/src/main/res/layout/register_base_fragment.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="40dp"
-            android:text="Complete your information"
+            android:text="@string/complete_your_information"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -55,7 +55,7 @@
             android:layout_marginEnd="16dp"
             android:fontFamily="sans-serif-thin"
             android:text="First step"
-            android:textColor="@color/primaryDarkColor"
+            android:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/tv_title"
