--- a/app/src/main/res/layout/register_step1_fragment.xml
+++ b/app/src/main/res/layout/register_step1_fragment.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -86,9 +85,8 @@
                     android:hint="@string/enter_your_phone_number"
                     android:imeOptions="actionDone"
                     android:inputType="number"
-                    android:maxLength="11"
+                    android:maxLength="10"
                     android:text="@={viewModel.phoneNumber}"
-                    android:textAlignment="center"
                     android:textColor="@color/black_light"
                     android:textSize="18sp" />
 
