--- a/app/src/main/res/layout/register_step2_fragment.xml
+++ b/app/src/main/res/layout/register_step2_fragment.xml
@@ -1,20 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.alimonapps.donotsleep.ui.login.step2.RegisterStep2ViewModel" />
+
     </data>
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.login.step2.RegisterStep2Fragment">
+        android:background="#f7f8fc"
+        android:orientation="vertical"
+        android:weightSum="100">
 
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="step2" />
+            android:layout_height="0dp"
+            android:layout_weight="30">
 
-    </FrameLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="30dp"
+                android:text="@string/phone_emergency"
+                android:textColor="@color/green"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="65">
+
+            <TextView
+                android:id="@+id/txtPhone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="45dp"
+                android:layout_marginTop="30dp"
+                android:text="@string/phone_number"
+                android:textColor="#000"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+
+            <RelativeLayout
+                android:id="@+id/edit_phone"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_below="@+id/txtPhone"
+                android:layout_margin="30dp"
+                android:background="@drawable/bg_pin">
+
+                <ImageView
+                    android:id="@+id/phone"
+                    android:layout_width="15dp"
+                    android:layout_height="18dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="15dp"
+                    app:srcCompat="@drawable/ic_phone" />
+
+                <EditText
+                    android:id="@+id/mobile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_toEndOf="@+id/phone"
+                    android:background="@null"
+                    android:hint="@string/enter_your_phone_number"
+                    android:imeOptions="actionDone"
+                    android:inputType="number"
+                    android:maxLength="10"
+                    android:text="@={viewModel.phoneNumberEmergency}"
+                    android:textColor="@color/black_light"
+                    android:textSize="18sp" />
+
+            </RelativeLayout>
+
+
+            <ProgressBar
+                style="@style/AppTheme.WhiteAccent"
+                isInvisible="@{!viewModel.isShowLoading()}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@id/btn_register"
+                android:layout_alignTop="@id/btn_register"
+                android:layout_alignEnd="@+id/btn_register"
+                android:layout_alignBottom="@+id/btn_register"
+                android:background="@drawable/button_reg_corner"
+                android:indeterminate="true"
+                android:indeterminateTint="@color/white"
+                android:indeterminateTintMode="src_in"
+                android:padding="15dp"
+                app:backgroundTint="@color/button_primary" />
+
+            <Button
+                android:id="@+id/btn_register"
+                isInvisible="@{viewModel.isShowLoading()}"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_below="@+id/edit_phone"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/button_reg_corner"
+                android:text="@string/register"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:visibility="invisible" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
 </layout>
