--- a/app/src/main/res/layout/register_step1_fragment.xml
+++ b/app/src/main/res/layout/register_step1_fragment.xml
@@ -38,17 +38,26 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="65">
 
+            <ImageView
+                android:id="@+id/img_flag"
+                android:layout_width="40dp"
+                android:layout_height="20dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="30dp"
+                android:src="@drawable/ic_flag" />
+
             <TextView
                 android:id="@+id/txtPhone"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="45dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="30dp"
+                android:layout_toEndOf="@id/img_flag"
                 android:text="@string/phone_number"
                 android:textColor="#000"
                 android:textSize="16sp"
@@ -60,7 +69,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_below="@+id/txtPhone"
-                android:layout_margin="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="30dp"
                 android:background="@drawable/bg_pin">
 
                 <ImageView
