--- a/app/src/main/res/layout/register_step2_fragment.xml
+++ b/app/src/main/res/layout/register_step2_fragment.xml
@@ -42,13 +42,22 @@
             android:layout_height="0dp"
             android:layout_weight="65">
 
+            <ImageView
+                android:id="@+id/img_flag"
+                android:layout_width="40dp"
+                android:layout_height="20dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="30dp"
+                android:src="@drawable/ic_flag" />
+
             <TextView
                 android:id="@+id/txtPhone"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="45dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="30dp"
+                android:layout_toEndOf="@id/img_flag"
                 android:text="@string/phone_number"
                 android:textColor="#000"
                 android:textSize="16sp"
